--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "framer-motion": "^12.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1"
   },
