--- a/src/data/projectsData.json
+++ b/src/data/projectsData.json
@@ -1,24 +1,31 @@
 {
   "projects": [
-        
     {
-      "title": "Homyz",
-      "shortDescription": "A modern real estate marketplace built with React.js, featuring property listings, animations, and interactive components.",
-      "longDescription": "The Real Estate React App is a fully responsive and interactive platform for exploring property listings. It includes advanced filtering options, smooth animations, and engaging UI components. Built with React.js and Vite, the app integrates Framer Motion for animations, Swiper for image sliders, and React CountUp for dynamic counters. The user experience is enhanced with an accordion-based FAQ section and a sleek, modern design.",
-      "skills": ["React", "vite", "Swiper", "React Icons", "React CountUp", "React Accordion"],
-      "video": "#",
-      "liveDemoLink": "#",
-      "sourceCodeLink": "#"
-    },    
+      "title": "TastyTrek",
+      "shortDescription": "A full-stack food delivery web application with real-time order tracking, user/admin panels, and secure payments.",
+      "longDescription": "TastyTrek is a complete food delivery platform built using Spring Boot and React. It features user and admin dashboards, JWT-based authentication, and real-time order tracking. The app integrates Razorpay for secure online payments and stores images using AWS S3. Backend APIs are optimized for performance with MongoDB Atlas, and the backend is containerized using Docker for seamless deployment on Render.",
+      "skills": ["Spring Boot", "React", "MongoDB Atlas", "Docker", "JWT", "Razorpay", "AWS S3", "Bootstrap"],
+      "video": "https://www.youtube.com/embed/QnkhEgia3SM",
+      "liveDemoLink": "https://tastytrekjanisar.netlify.app",
+      "sourceCodeLink": "https://github.com/janisar392/TastyTrekApp"
+    },
     {
-      "title": "Job Portal",
-      "shortDescription": "A React.js-based job portal where job seekers can explore job listings, and employers can post new job openings.",
-      "longDescription": "The React Job Portal is a dynamic platform designed for job seekers and employers. Job seekers can view and apply for job listings, while employers can add new job postings. The portal is built using React.js with React Router DOM for seamless navigation. The user interface is responsive and user-friendly, providing an intuitive experience for all users.",
-      "skills": ["React", "CSS","HTML", "React Hooks","React Router DOM"],
-      "video": "#",
+      "title": "My AI Neighbor",
+      "shortDescription": "A full-stack AI image generator that transforms photos and text into Studio Ghibli-style art using Stability AI.",
+      "longDescription": "My AI Neighbor is a creative full-stack AI application that allows users to generate Studio Ghibli-style anime artwork from uploaded photos or text prompts. Built using React and Spring Boot, it offers two core modes: 'Photo to Art' and 'Text to Art'. The app features real-time image rendering, prompt enhancement, and a sleek UI with Tailwind CSS and Shadcn UI. Backend is powered by Spring Boot and Feign clients, deployed seamlessly on Render with frontend hosted via Netlify.",
+      "skills": ["React", "Tailwind CSS", "Shadcn UI", "Spring Boot", "Feign", "Netlify", "Render", "Stability AI"],
+      "video": "https://www.youtube.com/embed/lZbe_5LlKtU",
+      "liveDemoLink": "https://myaineighborjanisar.netlify.app",
+      "sourceCodeLink": "https://github.com/janisar392/MyAINeighbor"
+    },
+    {
+      "title": "AI Resume Builder",
+      "shortDescription": "An intelligent resume builder powered by local LLMs, offering personalized suggestions using prompt engineering.",
+      "longDescription": "AI Resume Builder is an AI-driven application that helps users create personalized and impactful resumes by leveraging local LLMs like DeepSeek through Ollama. The backend is powered by Spring Boot and Spring AI, using prompt engineering to tailor resume content in real time. The user interface is clean and minimal, built with HTML, CSS, and vanilla JavaScript. The app supports smart formatting and quick editing, helping users craft professional resumes with minimal effort.",
+      "skills": ["Spring Boot", "Spring AI", "DeepSeek", "Ollama", "Prompt Engineering", "HTML", "CSS", "JavaScript"],
+      "video": "https://www.youtube.com/embed/04OMCtM4tEU",
       "liveDemoLink": "#",
-      "sourceCodeLink": "#"
-    }   
-    
+      "sourceCodeLink": "https://github.com/janisar392/AI-Resume-Builder"
+    }
   ]
 }
